2011-02-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/run-dyn.sh: Add dynamic dmcs runner.

2011-02-08  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/OutputThread.h: Quickly sort & unique result
	before return.
	* src/network/OutputThread.cpp: Likewise.

	* include/solver/ChoicePoint.h: Fix mismatch type between SAT and Router.
	* src/solver/RelSatSolver.cpp: Likewise.

	* src/network/OutputThread.cpp: Fix sending back in case of EOF.

	* src/dmcs/StreamingDMCS.cpp: Swap order of interrupt and send
	message to SAT.

	* src/dmcs/QueryPlan.cpp: Move setupMetaNeighbors() to dmcsd, fix
	non-deterministic segfault.
	* src/dmcsd.cpp: Likewise.

	* include/solver/ChoicePoint.h: Fix get next flip.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/mcs/BeliefState.h: Add some assertion.

2011-02-07  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcs/StreamingDMCS.cpp: Support port in debug output.
	* include/dmcs/StreamingDMCS.h: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/dmcs/QueryPlan.h: Add mutex lock for creating NeighborList.
	* src/dmcs/QueryPlan.cpp (getNeighbors): Likewise.

	* src/dmcs/StreamingDMCS.cpp: Trigger neighbors only at the first
	round.

	* include/network/RouterThread.h: Pass on SAT's reset messages to
	neighbors.

	* include/dmcs/ConflictNotification.h: Allow sending NULL
	conflicts.
	* include/network/NeighborOut.h: Likewise.
	* include/dmcs/UnsatNotification.h: Likewise.
	* include/dmcs/StreamingForwardMessage.h: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* src/network/OutputThread.cpp: Add some more debug info.

	* include/solver/RelSatSolver.h: Add update_local_input().
	* src/solver/RelSatSolver.cpp: Likewise.

2011-02-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am (testMessagingGateway_LDADD): Add liblog.a

	* src/network/ConcurrentMessageDispatcher.cpp: Enable logging.

	* include/network/NeighborThread.h: Fix queue parameters.
