@@ -1,3 +1,12 @@
+2011-02-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
+
+	* include/network/AsynClient.tcc: Allow for changing k between sessions.
+	* include/network/AsynClient.h: Likewise.
+	* include/network/NeighborOut.h: Likewise.
+	* include/network/Handler.tcc: Likewise.
+	* include/network/Handler.h: Likewise.
+	* src/dmcsc.cpp: Likewise.
+
 2011-02-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* examples/run-dyn.sh: Add dynamic dmcs runner.
